Fix alignment of navbar css file

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -58,7 +58,4 @@
   border-radius: 100px;
   border-color: transparent;
   padding: 4px 10px;
-  margin-left: 2px;
-  margin-right: 2px;
-  min-width: 75px;
 }
